# Pictography

./: CMakeCache.txt  CMakeLists.txt  DataWriter.h  DecryptCMakeLists.txt  EncryptCMakeLists.txt  Makefile  README.md  cmake_install.cmake  decrypt.cxx  decryptscript  encrypt.cxx  encryptscript  file.vtk  getinput.C  getinput2.C  install  main.C  main.cxx  manager.h  run  runPicto  secretkey.txt  update  validData.C  validData.h
Encryption/: Encryption.cpp  Encryption.hpp  a.out
Integration/: CMakeCache.txt  CMakeLists.txt  DataReader.h  DataWriter.h  Decryption.hpp  Encryption.hpp  Makefile  Manager.h  Rasterize.h  Triangle.h  cmake_install.cmake  output.vtk  test.cxx
Integration/aux/crypto/: Decryption.h  Encryption.hpp
Integration/aux/io/: DataReader.h
Integration/test.app/Contents/: Info.plist
Integration/test.app/Contents/MacOS/: test
Qt/: Qt.cpp  run
UI/: 433UI  433UI.pro  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  run  updateUI
aux/: validData.h
aux/crypto/: Decryption.h  Encryption.cpp  Encryption.hpp  runDecrypt  testDecrypt.cxx
aux/imageCreation/: CMakeLists.txt  ImageManager.h  Triangle.h  generator.cxx
aux/io/: CMakeLists.txt  DataReader.h  DataWriter.h  ErrorHandling.h  test.cxx
decrypt/: Decryption.h
decrypt.app/Contents/: Info.plist
decrypt.app/Contents/MacOS/: decrypt
encrypt.app/Contents/: Info.plist
encrypt.app/Contents/MacOS/: encrypt
misc/testCases/: 1024chars.txt  break.txt
temp/: run  test.cxx
testCases/: 1025chars.txt
writer/: CMakeLists.txt  DWtester.cxx  DataWriter.cxx  DataWriter.h
