cmake_minimum_required(VERSION 2.8.12.1)
PROJECT(main CXX)
SET(VTK_DIR ~/VTK/VTK-8.1.2)
find_package(VTK REQUIRED)
include(${VTK_USE_FILE})
add_executable(main_test MACOSX_BUNDLE main)
set(CMAKE_CXX_FLAGS "-Wall")
if(VTK_LIBRARIES)
  target_link_libraries(main_test ${VTK_LIBRARIES})
else()
  target_link_libraries(main_test vtkHybrid)
endif()

